--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,14 @@
 <div class=" bg-dark border-right p-3" id="sidebar">
     <h3 class=" text-light">GifsApp</h3>
-    <hr class=" text-white">
+    <hr class=" text-whiteJ">
 
     <div class=" list-group list-reset">
-        <button class=" list-group-item list-group-item-actio">Valoran</button>
+        <button 
+            class=" list-group-item list-group-item-actio" 
+            *ngFor="let tag of tags"
+            (click)="searchTag(tag)"
+        >
+            {{tag | titlecase}} 
+        </button>
     </div>
 </div>
